# nowdocs

./: .gitignore  .pr_agent.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  build.rs  deny.toml
.cargo/: config.toml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  eval.yml  gates.yml  pr-agent.yml  release.yml  weekly-audit.yml
docs/: AGENT_SETUP.md  ARCHITECTURE.md  AUP.md  DMCA.md  GETTING_STARTED.md  LEGAL_GATE.md  MCP_CLIENTS.md  PRIVACY.md  RELEASE_READINESS.md  RERANKING.md  THREAT_MODEL.md  TRADEMARK.md  TROUBLESHOOTING.md  actual-usability-readiness.md
docs/superpowers/handoffs/code-agent/: c01-eval-foundation.md  c02-retrieval-trace.md
docs/superpowers/plans/: 2026-06-28-init-agentdocs.md  2026-06-28-nowdocs-dispatch.md  2026-06-28-nowdocs-impl.md  2026-07-06-robustness-ux-plan.md  2026-07-10-architecture-review-plan.md  2026-07-10-ci-cd-integrity.md  2026-07-12-v0.1-public-release.md  2026-07-13-retrieval-confidence-code-agent-execution.md  2026-07-13-retrieval-confidence-pipeline.md
docs/superpowers/prompts/: 2026-07-06-r1-kimi.md  2026-07-06-r2-kimi.md  2026-07-06-r3-kimi.md  2026-07-06-u1-kimi.md
docs/superpowers/specs/: 2026-06-28-agentdocs-design.md  2026-06-28-nowdocs-design-review.md  2026-07-02-legal-compliance.md  2026-07-06-r1-archive-validation.md  2026-07-06-r2-transactional-install.md  2026-07-06-r3-doctor.md  2026-07-06-robustness-ux.md  2026-07-06-u1-smoke-ux.md  2026-07-10-a1-foundation-cleanup.md  2026-07-13-retrieval-confidence-code-agent-orchestration-design.md  2026-07-13-retrieval-confidence-pipeline-design.md
docs/superpowers/specs/code-agent/: c01-eval-feedback-remediation.md  c01-eval-foundation.md  c02-retrieval-trace.md  c02-trace-feedback-remediation.md  c03-json-evaluator.md  c10-eval-suite-gates.md
examples/: retrieval_eval.rs
implementation/: INDEX.md
implementation/prompts/: 01-3b-golden-eval.md  02-4bc-tools.md  03-4efg-registry.md  04-4d-cli-integration.md  05-5a-binstall-matrix.md  06-5b-homebrew-tap.md  07-5c-ci-gates.md  08-5d-seed-crates.md  09-5e-quality-gates.md
scripts/: check.sh  ci-check-dco.sh  ci-check-manifest.sh  ci-classify-changes.sh  ci-no-vectors.sh  ci-prepare-nextjs-fixture.sh  pre-push.sh
scripts/audit_license/: README.md  audit.py  env.example  regex_rules.py  test_audit.py  test_regex.py
seed-crates/: README.md  index.json
seed-crates/share/nextjs-docs/: LICENSE  NOTICES  chunks.jsonl  manifest.json
seed-crates/share/react-docs/: NOTICES  chunks.jsonl  manifest.json
seed-crates/share/vue-docs/: NOTICES  chunks.jsonl  manifest.json
seed-crates/src/next-docs/01-app/: 04-glossary.md
seed-crates/src/next-docs/03-architecture/: accessibility.md  fast-refresh.md  nextjs-compiler.md  supported-browsers.md
seed-crates/src/next-docs/04-community/: 01-contribution-guide.md
seed-crates/src/react-docs/: index.md  versions.md
seed-crates/src/react-docs/blog/: index.md
seed-crates/src/react-docs/community/: acknowledgements.md  conferences.md  docs-contributors.md  index.md  meetups.md  team.md  translations.md  versioning-policy.md  videos.md
seed-crates/src/react-docs/errors/: 377.md
seed-crates/src/react-docs/learn/: add-react-to-an-existing-project.md  adding-interactivity.md  build-a-react-app-from-scratch.md  choosing-the-state-structure.md  conditional-rendering.md  creating-a-react-app.md  describing-the-ui.md  editor-setup.md  escape-hatches.md  extracting-state-logic-into-a-reducer.md  importing-and-exporting-components.md  index.md  installation.md  javascript-in-jsx-with-curly-braces.md  keeping-components-pure.md  lifecycle-of-reactive-effects.md  managing-state.md  manipulating-the-dom-with-refs.md  passing-data-deeply-with-context.md  passing-props-to-a-component.md  preserving-and-resetting-state.md  queueing-a-series-of-state-updates.md  react-developer-tools.md  reacting-to-input-with-state.md  referencing-values-with-refs.md  removing-effect-dependencies.md  render-and-commit.md  rendering-lists.md  responding-to-events.md  reusing-logic-with-custom-hooks.md  rsc-sandbox-test.md  scaling-up-with-reducer-and-context.md  (+15 more)
seed-crates/src/vue-docs/: index.md
seed-crates/tmp/: patch_manifest.py  prep_docs.py  rebuild_nextjs.py
src/: agent_contract.rs  cache.rs  chunker.rs  cli.rs  confidence.rs  doctor.rs  embedder.rs  errors.rs  eval.rs  ingest.rs  input.rs  inspect.rs  lib.rs  main.rs  manifest.rs  mcp.rs  registry.rs  registry_build.rs  registry_receipt.rs  rerank.rs  retrieve.rs  sanitize.rs  smoke.rs  store.rs  token.rs  tools.rs  update.rs  verify.rs
src/automation/: docset.rs  lock.rs  mod.rs  operation.rs  plan.rs  setup.rs
src/clients/: claude_code.rs  claude_desktop.rs  codex.rs  config_io.rs  cursor.rs  generic.rs  mod.rs
tests/: agent_contract_tests.rs  agent_setup_e2e_tests.rs  automation_docset_tests.rs  automation_lock_tests.rs  automation_operation_tests.rs  automation_plan_tests.rs  cache_tests.rs  chunker_tests.rs  ci-check-dco-tests.sh  ci-classify-changes-tests.sh  claude_code_adapter_tests.rs  claude_desktop_adapter_tests.rs  cli_tests.rs  client_config_io_tests.rs  client_execution_contract_tests.rs  codex_adapter_tests.rs  confidence_tests.rs  cursor_adapter_tests.rs  distribution_metadata_tests.rs  doctor_tests.rs  embedder_tests.rs  eval_metrics_tests.rs  eval_report_tests.rs  eval_schema_tests.rs  eval_tests.rs  generic_adapter_tests.rs  ingest_tests.rs  input_tests.rs  inspect_tests.rs  manifest_tests.rs  mcp_tests.rs  registry_build_tests.rs  registry_index_tests.rs  registry_receipt_tests.rs  registry_tests.rs  retrieve_tests.rs  sanitize_tests.rs  setup_tests.rs  smoke_tests.rs  store_tests.rs  (+5 more)
tests/ci/: test_manifest_check.sh  test_no_vectors.sh
tests/fixtures/: gen_reference.py  jina_ref.json
tests/fixtures/eval/: nextjs.json  react.json  schema-smoke.json  vue.json
tests/fixtures/golden/: authentication.md  error-codes.md  golden.json  negative.json  pagination.md
(+660 files in other folders)
