[package]
name = "nowdocs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Single-binary MCP documentation server for LLM coding agents — ingest, chunk, embed, and retrieve docs locally"
repository = "https://github.com/nowdocs/nowdocs"
homepage = "https://github.com/nowdocs/nowdocs"
readme = "README.md"
keywords = ["mcp", "llm", "documentation", "retrieval", "embeddings"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[lib]
name = "nowdocs"
path = "src/lib.rs"

[[bin]]
name = "nowdocs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
sha2 = "0.10"
dirs = "5.0"
tiktoken-rs = "0.12"
# embedder (S0 + Wave 2)
candle-core = { version = "0.11", default-features = false }
candle-nn = "0.11"
candle-transformers = "0.11"
tokenizers = "0.23"
hf-hub = "0.4"
# store (Wave 2 — only task 2b may touch these lines, AGENTS §4.5)
lancedb = "0.30"
tokio = { version = "1", features = ["rt", "macros", "fs"] }
arrow = "58"
arrow-array = "58"
arrow-schema = "58"
half = "2"
futures = "0.3"
lance-arrow = "7"
openssl = { version = "0.10", features = ["vendored"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ name }-v{ version }-{ target }"
pkg-fmt = "tgz"

[dev-dependencies]
tempfile = "3.10"
