[package]
name = "nowdocs"
version = "0.1.1"
rust-version = "1.97"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Single-binary MCP documentation server for LLM coding agents — ingest, chunk, embed, and retrieve docs locally"
repository = "https://github.com/nowdocs/nowdocs"
homepage = "https://github.com/nowdocs/nowdocs"
readme = "README.md"
keywords = ["mcp", "llm", "documentation", "retrieval", "embeddings"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

include = [
  "/Cargo.toml",
  "/Cargo.lock",
  "/build.rs",
  "/src/**",
  "/README.md",
  "/LICENSE",
  "/LICENSE-MIT",
  "/LICENSE-APACHE",
  "/NOTICE",
]

[lib]
name = "nowdocs"
path = "src/lib.rs"

[[bin]]
name = "nowdocs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
sha2 = "0.11"
dirs = "6.0"
tiktoken-rs = "0.12"
# embedder (S0 + Wave 2)
candle-core = { version = "0.11", default-features = false }
candle-nn = "0.11"
candle-transformers = "0.11"
tokenizers = "0.23"
hf-hub = "0.5"
# store (Wave 2 — only task 2b may touch these lines, AGENTS §4.5)
lancedb = "0.31"
# Enable Lance's vendored protobuf compiler path so transitive Lance crates
# do not require a system `protoc` during clean builds.
lance = { version = "8", default-features = false, features = ["protoc"] }
tokio = { version = "1", features = ["rt", "macros", "fs"] }
arrow = "58.3"
arrow-array = "58.3"
arrow-schema = "58.3"
half = "2"
futures = "0.3"
lance-arrow = "8"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[features]
# Enables `file://` URL acceptance and `NOWDOCS_TEST_URL` env var reads for
# test fixtures. This is a compile-time gate (not a spoofable runtime check):
# `cargo build` / `cargo build --release` do NOT enable it, so `file://` URLs
# and `NOWDOCS_TEST_URL` are rejected in production builds. `cargo test`
# activates it automatically via the self dev-dependency below.
test-fixture = []

[dev-dependencies]
# Self-dependency: activates `test-fixture` during `cargo test` so integration
# tests (tests/*.rs) get `file://` URL support without runtime detection.
nowdocs = { path = ".", features = ["test-fixture"] }
tempfile = "3.10"
