[package]
name = "nowdocs"
version = "0.2.0"
rust-version = "1.97"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Single-binary MCP documentation server for LLM coding agents — ingest, chunk, embed, and retrieve docs locally"
repository = "https://github.com/nowdocs/nowdocs"
homepage = "https://github.com/nowdocs/nowdocs"
readme = "README.md"
keywords = ["mcp", "llm", "documentation", "retrieval", "embeddings"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

include = [
  "/Cargo.toml",
  "/Cargo.lock",
  "/build.rs",
  "/src/**",
  "/README.md",
  "/LICENSE",
  "/LICENSE-MIT",
  "/LICENSE-APACHE",
  "/NOTICE",
]

[lib]
name = "nowdocs"
path = "src/lib.rs"

[[bin]]
name = "nowdocs"
path = "src/main.rs"

[[bin]]
name = "nowdocs-registry-build"
path = "src/bin/nowdocs-registry-build.rs"
required-features = ["registry-builder"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
sha2 = "0.11"
flate2 = "1.1"
dirs = "6.0"
ureq = { version = "3.3", default-features = false, features = ["rustls"] }
# Used by the update cache to atomically replace a same-directory temporary
# file on every supported release platform.
tempfile = "3.10"
# Direct semver for stable binary-version comparison in the update service
# (avoids a hand-rolled parser). Already in the transitive tree via lancedb.
semver = "1.0"
tiktoken-rs = "0.12"
# embedder (S0 + Wave 2)
candle-core = { version = "0.11", default-features = false }
candle-nn = "0.11"
candle-transformers = "0.11"
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
hf-hub = { version = "0.5", default-features = false, features = ["tokio", "ureq", "rustls-tls"] }
# store (Wave 2 — only task 2b may touch these lines, AGENTS §4.5)
lancedb = "0.31"
async-trait = "0.1"
# Use the runner-provided protobuf compiler; release CI installs it explicitly
# (including inside the Cross container for aarch64 musl builds).
lance = { version = "8", default-features = false }
tokio = { version = "1", features = ["rt", "macros", "fs"] }
arrow = "58.3"
arrow-array = "58.3"
arrow-schema = "58.3"
half = "2"
futures = "0.3"
lance-arrow = "8"
# Cross-platform process-lifetime advisory file lock for the automation
# operation lock and the hardened per-docset install lock (C3). fs2's
# `try_lock_exclusive` maps to `flock(2)` on Unix and `LockFileEx` on Windows;
# the lock is released automatically when the owning process exits (crash
# included), which is the conservative live-owner guarantee C3 requires.
fs2 = "0.4"
# C3-R1: open-time no-follow primitive for plan/lock files. `libc::O_NOFOLLOW`
# prevents the kernel from following a symlink in the final path component at
# `open(2)` time, closing the TOCTOU hole left by `symlink_metadata`-then-open.
# libc is already in the dependency tree (transitive via candle-core); adding
# it as a direct dependency adds zero new downloads. Unix-only: on Windows the
# no-follow path fails closed with a stable error (see `open_nofollow`).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[features]
# Enables `file://` URL acceptance and `NOWDOCS_TEST_URL` env var reads for
# test fixtures. This is a compile-time gate (not a spoofable runtime check):
# `cargo build` / `cargo build --release` do NOT enable it, so `file://` URLs
# and `NOWDOCS_TEST_URL` are rejected in production builds. `cargo test`
# activates it automatically via the self dev-dependency below.
test-fixture = []
registry-builder = []

[dev-dependencies]
# Self-dependency: activates `test-fixture` during `cargo test` so integration
# tests (tests/*.rs) get `file://` URL support without runtime detection.
nowdocs = { path = ".", features = ["test-fixture"] }
